# usb-mouse-touchpad-click-toggle

./: LICENSE  README.md  input_device_manager.py  main.py  pyproject.toml  xinput.py  xinput_utils.py
source/: config_manager.py  setup_utils.py  touchpad_tapping_manager.py  xinput_utils.py
