[tool.poetry]
name = "usb-mouse-touchpad-click-toggle"
version = "0.1.0"
description = ""
authors = ["Amir Hossein Baghernezhad <amhoba2014@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
